# multimodal-stock-prediction

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  RESEARCH.md  pyproject.toml
.github/workflows/: ci.yml
1_data/: 400_j.csv  gcore_top20.csv  growth257.csv  index_composition_summary.csv  jpxprime150weight_j.csv  standard_top20.csv  topixweight_j.csv
1_data/edinet_reports/: csv_structure_analysis.csv  edinet_financial_data.csv  edinet_list.txt
1_data/processed/: company_search_map.json  data_coverage_summary.csv  data_coverage_summary_ALL_STOCKS.csv  downloaded_data_summary_by_company.csv  edinet_features_financials_hybrid.csv  edinet_features_finbert.csv  edinet_features_finbert_indices_strict.csv  edinet_features_llm.csv  extracted_financial_data_indices_parsed.csv  feature_engineering_plan.csv  financial_data_wide.csv  global_macro_features.csv  index_membership_summary.csv  master_stock_list.csv  news_sentiment_features.csv  news_stats_by_code.csv  news_stats_by_keyword.csv  sentiment_monthly_trend.csv  sentiment_noise_check_list.csv  stock_sector_info.csv  top200_stock_list.csv  top200_stock_list_final.csv
1_data/raw/: growth_250.csv  growth_250_tickers.txt  growth_core.csv  growth_core_tickers.txt  jpx_nikkei_400.csv  jpx_nikkei_400_tickers.txt  nikkei_225.csv  nikkei_225_tickers.txt  top_200_trad_val_tickers.txt  top_200_trad_val_tickers_filtered.txt  topix_100.csv  topix_100_tickers.txt  topix_core30.csv  topix_core30_tickers.txt  usd_jpy_exchange_rate.csv
2_src/: export_tree.py
2_src/99_archive/: analyze_csv_structure.py  analyze_data_integration_readiness.py  analyze_downloaded_zips.py  analyze_feature_inventory.py  analyze_final_dataset.py  analyze_final_dataset_quality.py  analyze_news_stats.py  analyze_readiness.py  analyze_selected_companies_xbrl.py  analyze_sentiment.py  analyze_sentiment_scores.py  analyze_stock_data.py  analyze_stock_sector.py  analyze_xbrl_deep_dive.py  analyze_xbrl_structure.py  analyze_zip_structure.py  check_anomalies.py  check_data_match.py  check_docid_linkage_source.py  collect_edinet_reports.py  collect_headlines_from_rss.py  collect_ir.py  collect_news.py  collect_tdnet_disclosures.py  collect_tdnet_disclosures_full.py  create_final_dataset.py  create_stock_charts.py  extract_features_with_finbert.py  extract_features_with_llm.py  extract_financial_numerics_rulebased.py  extract_financials_for_targets.py  extract_tickers_from_csvs.py  fetch_edinet_reports.py  (+27 more)
docs/: CAREER_ROADMAP.md  IMPROVEMENTS.md  SKILLS.md
(+339 files in other folders)
